2009-07-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* nsfont.m (nsfont_draw): Remove code for stippling, which actually
	does tiling.

	* nsterm.m (ns_maybe_dumpglyphs_background): Likewise.

2009-07-14  Kenichi Handa  <handa@m17n.org>

	* font.c (font_vconcat_entity_vectors): New function.
	(struct font_sort_data): New member font_driver_preference.
	(font_compare): Check font_driver_preference.
	(font_sort_entities): The format of the first argument changed.
	(font_delete_unmatched): Likewise.
	(font_list_entities): The return type changed.
	(font_select_entity): The format of the second argument changed.
	(font_find_for_lface): Adjusted for the above changes.  Don't
	suppress the checking of C even if the repertory supports it.
	(Flist_fonts): Adjusted for the above changes.

	* ftfont.c (ftfont_spec_pattern): New arg langname.  Caller
	changed.
	(ftfont_list): Adjusted for the change of ftfont_spec_pattern.
	Reject a font who has adstyle property that is different from a
	langname derived from registry property.
	(ftfont_match): Adjusted for the change of ftfont_spec_pattern.

2009-07-13  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (directory_files_internal) [WINDOWSNT]: Don't make a
	local copy of dirfilename.

2009-07-13  Kenichi Handa  <handa@m17n.org>

	* chartab.c (sub_char_table_ref_and_range): Fix the range check
	against max_char.

	* cmds.c (internal_self_insert): Check sym by SYMBOLP before
	calling XSYMBOL (sym).

2009-07-11  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (directory_files_internal_w32_unwind) [WINDOWSNT]: New
	function.
	(directory_files_internal) [WINDOWSNT]: Bind
	w32-get-true-file-attributes to either t or nil, depending whether
	the filesystem of the directory is fast or slow.

	* w32.c (logon_network_drive): Don't assume PATH is an absolute
	file name.
	(is_slow_fs): New function.
	(stat): Use it to determine whether to issue more system calls to
	get accurate file attributes, when w32-get-true-file-attributes is